--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         </div>
         <div class="video-container">
           <div class="video_media">
-            <video class="video" preload="auto" src="./img/video_Trim.mp4" autoplay muted loop></video>
+            <video class="video" preload="auto" autoplay muted loop>
+              <source src="./img/video_Trim.mp4" type="video/mp4" />
+            </video>
           </div>
         </div>
       </div>
