--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="video-container">
           <div class="video_media">
-            <video class="video" preload="auto" autoplay muted loop>
+            <video class="video" preload="auto" autoplay muted loop playsinline webkit-playinginline>
               <source src="./img/video_Trim.mp4" type="video/mp4" />
             </video>
           </div>
