--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./slick/slick/slick.css" />
-    <link rel="stylesheet" href="./slick/slick/slick-theme.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./slick/slick/slick.min.js"></script>
-    <script src="./js/index.js"></script>
-    <script src="./js/wow.min.js"></script>
-    <script>
-      new WOW().init();
-    </script>
+    <meta
+      name="Description"
+      content="SK Kadeřnictví na Novobranské bez objednání. Barvení vlasů, Balayage, Ombré, Melír. Střihy a účesy jakékoliv složitosti od profesionálního kadeřníka v Brně. Online rezervace termínů na měsíc dopředu"
+    />
+    <meta
+      name="keywords"
+      content="Kadeřnictví,bez objednání,Barvení,Balayage,Ombré,Melír, Střihy a účesy, Online rezervace "
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="./img/favicon.png" />
-    <title>SK STUDIO</title>
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./slick/slick/slick.css" />
+    <link rel="stylesheet" href="./slick/slick/slick-theme.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <title>Kadeřník na Novobranské bez objednání - Serhii Kotliar</title>
   </head>
   <body>
     <header>
@@ -76,31 +77,21 @@
         <div class="container">
           <h2 class="slider_title">Fotogalerie</h2>
           <div class="slider">
-            <div class="slide"><img data-lazy="./img/Kadernik/1.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/2.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/3.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/4.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/5.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/7.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/8.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/9.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/10.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/11.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/12.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/13.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/14.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/15.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/16.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/17.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/18.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/19.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/20.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/21.jpg" alt="" /></div>
-            <div class="slide"><img data-lazy="./img/Kadernik/22.jpg" alt="" /></div>
+            <div class="slide"><img class="y" src="./img/Kadernik/2.jpg" alt="photo" /></div>
+            <div class="slide"><img class="y" src="./img/Kadernik/3.jpg" alt="photo" /></div>
+            <div class="slide"><img class="y" src="./img/Kadernik/4.jpg" alt="photo" /></div>
+            <div class="slide"><img class="y" src="./img/Kadernik/5.jpg" alt="photo" /></div>
+            <div class="slide"><img class="y" src="./img/Kadernik/7.jpg" alt="photo" /></div>
+            <div class="slide"><img class="x" src="./img/Kadernik/8.jpg" alt="photo" /></div>
+            <div class="slide"><img class="x" src="./img/Kadernik/9.jpg" alt="photo" /></div>
+            <div class="slide"><img class="x" src="./img/Kadernik/10.jpg" alt="photo" /></div>
+          </div>
+          <div class="slider_button">
+            <a href="https://www.instagram.com/serhii_kotliar_/">Zobrazit více fotografií</a>
           </div>
         </div>
       </div>
-      <div class="section3 wow animate__animated animate__bounceInRight">
+      <div class="section3">
         <div class="container">
           <div class="price" id="price">
             <h2 class="price-title">Ceník</h2>
@@ -175,7 +166,7 @@
       <div class="sectionMap" id="MAP">
         <iframe
           class="sectionMap_map"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20846.052782408962!2d16.560490346035387!3d49.22414301006894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471294099dc06bbb%3A0xbfcf161b01a48b0d!2z0KTQsNC60YPQu9GM0YLQtdGCINCY0L3RhNC-0YDQvNCw0YbQuNC-0L3QvdGL0YUg0KLQtdGF0L3QvtC70L7Qs9C40LksINCi0LXRhdC90LjRh9C10YHQutC40Lkg0KPQvdC40LLQtdGA0YHQuNGC0LXRgiDQkdGA0L3Qvg!5e0!3m2!1sru!2scz!4v1650815355947!5m2!1sru!2scz"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2607.35145269768!2d16.610855415849414!3d49.1938920849784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471295b43d253b79%3A0x17392d6a377d37a2!2zU0sgS2FkZcWZbmljdHbDrSBuYSBOb3ZvYnJhbnNrw6kgYmV6IG9iamVkbsOhbsOt!5e0!3m2!1sru!2scz!4v1654542679256!5m2!1sru!2scz"
           width="600"
           height="450"
           style="border: 0"
@@ -192,7 +183,10 @@
             </div>
             <div class="sectionMap_road">
               <div class="sectionMap_goText">VYHLEDAT CESTU</div>
-              <a href="https://g.page/FIT_VUT?share"><img src="./img/map-arrow-right.png" alt="arrow" /></a>
+              <a
+                href="https://www.google.com/search?q=kadernictvi%20na%20novobranska%2014&oq=&aqs=chrome.1.35i39i362l8.182893j0j7&sourceid=chrome&ie=UTF-8&tbs=lf:1,lf_ui:14&tbm=lcl&sxsrf=ALiCzsYbn5_ff_jW1IFQ4Mg18vjWtozrKg:1654542555314&rflfq=1&num=10&rldimm=1673418670765586338&lqi=Ch1rYWRlcm5pY3R2aSBuYSBub3ZvYnJhbnNrYSAxNFofIh1rYWRlcm5pY3R2aSBuYSBub3ZvYnJhbnNrYSAxNJIBCmhhaXJfc2Fsb26qARMQASoPIgtrYWRlcm5pY3R2aSgR&ved=2ahUKEwjvyJmqw5n4AhVK4qQKHQabAloQvS56BAgREAE&sa=X&rlst=f#"
+                ><img src="./img/map-arrow-right.png" alt="arrow"
+              /></a>
             </div>
           </div>
         </div>
@@ -210,4 +204,12 @@
       </div>
     </footer>
   </body>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="./slick/slick/slick.min.js"></script>
+  <script src="./js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
+  <script src="./js/index.js"></script>
 </html>
