--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="wrapper">
         <div class="container">
           <img src="./img/sk.png" alt="logo" class="logo" />
+          <div class="logo-mobile"><img src="./img/logo_mob.svg" alt="logo-mobile" /></div>
           <div class="header-text">
             <div class="header-text__tags wow animate__animated animate__fadeInUpBig">
               <div class="tag">#Kadeřník</div>
